@@ -2,6 +2,7 @@ Version 1.3
 ~~~~~~~~~~~
 * Move all pure Mark6 functionality to mark6sg
 * Python utils: explicitly call python2
+* more conformant help and version information: printVDIFheader
 
 Version 1.2
 ~~~~~~~~~~~
